--- a/Code LabVIEW/README
+++ b/Code LabVIEW/README
@@ -1,1 +1,24 @@
+# FPGA-with-NI-ELVIS
 
+## Presentation
+This GitHub site gathers all requiered informations to learn how to first handle the National Instrument Digital Systems Development Board from the software installation to the control of a servo-motor. The goals of this project are to discover the board, see how it works, learn how to code it, how to use the different elements available on the board and finally to control a servo-motor. 
+
+## Provided materials
+    
+* A power point tutorial, in which is explained how to connect the board, how to create a new project, how to control a LED and a servo-motor with the DSDB and LABVIEW.
+* A video tutorial, with the same information but visually, as well as the presentation of the results.
+* A written tutorial, which goes deeper into the details than previous tutorials.
+* Source codes used during the project. 
+     
+
+This project was carried out at the UMONS Faculty of Engineering in April-May 2019 as part of the Hardware-Software Platforms course with Professor C. Valderamma.
+
+## Video
+
+Please look at [Discovery of the DSDB](https://www.youtube.com/watch?v=NnRzQJP9k2Y)
+
+## Authors
+
+* **DUFRANE Antoine** (Antoine.DUFRANE@student.umons.ac.be)
+* **FOTSO Mathieu** (Mathieu.FOTSOTAGNE@student.umons.ac.be) 
+* **LEGER Louise** (Louise.LEGER@student.umons.ac.be)
